[package]
name = "the-rust-programing-language"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guess_number"
src = "./src/guess_number.rs"

[[bin]]
name = "first_word"
src = "./src/first_word.rs"

[[bin]]
name = "drop_trait"
src = "./src/drop_trait.rs"

[[bin]]
name = "hash_map"
src = "./src/hash_map.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.5"
io = "0.0.2"